--- a/d3-3.3.0/package.json
+++ b/d3-3.3.0/package.json
@@ -34,11 +34,11 @@
     }
   },
   "dependencies": {
-    "jsdom": "~0.5.3"
+    "jsdom": "^0.5.7"
   },
   "devDependencies": {
     "smash": "~0.0.8",
-    "uglify-js": "2.3.6",
+    "uglify-js": "~3.2.0",
     "vows": "0.7.x"
   },
   "scripts": {
